Split out grinder-core module.